<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp">

    <Button
        android:id="@+id/btnCreateAsyncWork"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/create"
        app:layout_constraintEnd_toStartOf="@+id/btnStartAsyncWork"
        app:layout_constraintStart_toStartOf="parent"
        />

    <Button
        android:id="@+id/btnStartAsyncWork"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/start"
        app:layout_constraintEnd_toStartOf="@+id/btnCancelAsyncWork"
        app:layout_constraintStart_toEndOf="@+id/btnCreateAsyncWork"
        />

    <Button
        android:id="@+id/btnCancelAsyncWork"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnStartAsyncWork"
        />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCreateAsyncWork"
        android:textAlignment="center"
        android:gravity="center"
        android:background="@color/colorAsyncTaskActivity"
        android:textSize="40sp"
        />


</android.support.constraint.ConstraintLayout>