<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:layout_margin="10dp">

    <Button
        android:id="@+id/btnAsyncTaskActivity"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        app:layout_constraintBottom_toTopOf="@+id/btnLoaderActivity"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread"
        android:text="@string/asynctask_activity"
        android:background="@color/colorAsyncTaskActivity"
        android:textSize="20sp"
        />

    <Button
        android:id="@+id/btnLoaderActivity"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        app:layout_constraintBottom_toTopOf="@+id/btnThreadsActivity"
        app:layout_constraintTop_toBottomOf="@+id/btnAsyncTaskActivity"
        android:text="@string/loader_activity"
        android:background="@color/colorLoaderActivity"
        android:textSize="20sp"
        />

    <Button
        android:id="@+id/btnThreadsActivity"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLoaderActivity"
        android:text="@string/threads_activity"
        android:background="@color/colorThreadsActivity"
        android:textSize="20sp"
        />


</android.support.constraint.ConstraintLayout>